# alpine-adventure

./: .clang-format  CMakeLists.txt  README.md  camera.cpp  camera.hpp  command-reader.scm  context.hpp  game.cpp  game.hpp  lighting.vert  main.cpp  main.scm  object.hpp  script.cpp  script.hpp  scriptInterface.cpp  threadGuard.hpp  types.hpp  videoContext.hpp
c++/: camera.cpp  camera.hpp  collider.hpp  collisionDetector.cpp  collisionDetector.hpp  context.cpp  context.hpp  game.cpp  game.hpp  keyStates.hpp  main.cpp  math.hpp  object.hpp  script.cpp  script.hpp  scriptInterface.cpp  sprite.hpp  textureDB.cpp  textureDB.hpp  threadGuard.hpp  types.hpp  util.hpp  videoContext.hpp  widjet.hpp
ebl/: boot.ebl  main.ebl
glsl/: lighting.frag
scheme/: boot.scm  command-reader.scm  main.scm  util.scm
